add hero section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         </div>
     </header>
 
+    <main>
+        <div class="hero">
+            <h1>Mirai</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>
+                 Ipsum quos tenetur sunt est soluta dicta ullam corrupti repellat porro expedita? <br>
+                  Consequatur ea temporibus quasi ipsum odio ad dolores aut reprehenderit.</p>
+        </div>
+    </main>
+
     <script src="js/script.js"></script>
 </body>
 </html>
