add animations and configuration

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirai</title>
-    <link rel="icon" type="image/icon" href="/image/logo.jpeg">
+    <link rel="icon" type="image/icon" href="/image/logo.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -40,103 +40,95 @@
     <main>
         <div class="hero" id="home">
             <article>
-                <h1>Mirai</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br>
-                    Ipsum quos tenetur sunt est soluta dicta ullam corrupti repellat porro expedita? <br>
-                    Consequatur ea temporibus quasi ipsum odio ad dolores aut reprehenderit.
+                <h1>Baked With Love</h1>
+                <p>Welcome to Mirai!<br>
+                    We serve the best product to our customers with all of our passion.<br>
                 </p>
             </article>
         </div>
-        <div class="card-container" id="blog">
-            <h4>Daily Blog</h4>
+        <div class="card-container hidden" id="blog">
+            <h3>Daily Blog</h3>
             <div class="cards">
-                <div class="card">
+                <div class="card hidden">
                     <img src="image/img1.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, dicta iure eaque doloremque non nostrum.</p>
+                    <p>Croissants are delicious pastries from France. They are made with a yeast-leavened dough that is layered with butter and folded several times to create a flaky and buttery texture.</p>
                 </div>
-                <div class="card">
+                <div class="card hidden">
                     <img src="image/img2.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, dicta iure eaque doloremque non nostrum.</p>
+                    <p>A dessert cake with ice cream is a delicious way to enjoy two of the most popular sweet treats in one. You can use different flavors of ice cream, toppings, and decorations.</p>
                 </div>
-                <div class="card">
+                <div class="card hidden">
                     <img src="image/img3.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, dicta iure eaque doloremque non nostrum.</p>
+                    <p>Are you craving for a sweet treat that will make your day? Look no further than our delicious slice of cake! Our cake is made with the finest ingredients and baked to perfection.</p>
                 </div>
-                <div class="card">
-                    <img src="image/img1.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, dicta iure eaque doloremque non nostrum.</p>
-                </div>
-                <div class="card">
-                    <img src="image/img2.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, dicta iure eaque doloremque non nostrum.</p>
-                </div>
-                <div class="card">
-                    <img src="image/img3.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, dicta iure eaque doloremque non nostrum.</p>
+                <div class="card hidden">
+                    <img src="image/img4.jpg" alt="">
+                    <p>Cupcakes are one of the most popular and versatile desserts that you can make at home. They are perfect for any occasion, whether it’s a birthday, a party, a holiday, or just a treat for yourself.</p>
                 </div>
             </div>
         </div>
-        <div class="service-container" id="service">
+        <div class="service-container hidden" id="service">
             <h3>Our Service</h3>
             <div class="cards-services">
                 <div class="service">
                     <h4>Cake</h4>
                     <i class="fa fa-cake"></i>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <p>we can make cakes of different sizes, shapes, flavors, and designs. You can choose from a variety of options, such as chocolate, vanilla, red velvet, carrot, cheesecake, and more</p>
                 </div>
-                <div class="service">
+                <div class="service hidden">
                     <h4>Pastry</h4>
                     <i class="fas fa-bread-slice"></i>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <p>We are skilled and experienced pastry maker who can create any pastry you desire. Whether you need pastry for a birthday, a wedding, an anniversary, we can make it for you.</p>
                 </div>
-                <div class="service">
+                <div class="service hidden">
                     <h4>Dessert</h4>
                     <i class="fas fa-ice-cream"></i>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <p>we can make desserts of different types, such as cakes, pies, tarts, puddings, and more. You can choose from a variety of flavors, toppings, and designs to suit your taste and theme.</p>
                 </div>
             </div>
         </div>
 
-        <div class="container-image-galery">
+        <div class="container-image-galery hidden">
             <h2 class="heading-text">Baked <span>image gallery</span></h2>
             <div class="image-gallery">
-                <div class="column">
+                <div class="column hidden">
                     <div class="image-item">
-                        <img src="https://images.unsplash.com/photo-1506459225024-1428097a7e18?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJha2VyeXxlbnwwfDF8MHx8fDA%3D" alt=""/>
+                        <img src="/image/blueberrycake.jpg" alt=""/>
                         <div class="overlay"><span>Blueberry Cake</span></div>
                     </div>
                 </div>
-                <div class="column">
+                <div class="column hidden">
                     <div class="image-item">
-                        <img src="https://images.unsplash.com/photo-1569864358642-9d1684040f43?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGJha2VyeXxlbnwwfDB8MHx8fDA%3D" alt="" />
+                        <img src="/image/macaroon.jpg" alt="" />
                         <div class="overlay"><span>Macaroons</span></div>
                     </div>
                     <div class="image-item">
-                        <img src="https://plus.unsplash.com/premium_photo-1687886026544-a07433c0ee2a?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8YmFrZXJ5fGVufDB8MHwwfHx8MA%3D%3D" alt="" />
+                        <img src="/image/cookies.jpg" alt="" />
                         <div class="overlay"><span>Cookies</span></div>
                     </div>
                 </div>
-                <div class="column">
+                <div class="column hidden">
                     <div class="image-item">
-                        <img src="https://images.unsplash.com/photo-1613929231151-d7571591259e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGJha2VyeXxlbnwwfDF8MHx8fDA%3D" alt="" />
+                        <img src="/image/croissant.jpg" alt="" />
                         <div class="overlay"><span>Croissant</span></div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="about-us">
+        <div class="about-us hidden">
             <h3>About US</h3>
             <div class="container-us">
-                <img src="https://plus.unsplash.com/premium_photo-1682088968333-eeeea143a7c5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTN8fGJha2VyeXxlbnwwfDB8MHx8fDA%3D" alt="">
+                <img src="/image/samantha-sophia-WNQUJY7Fepw-unsplash.jpg" alt="">
                 <article class="description">
                     <h3><span>Mirai</span></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aut accusamus repellat dolorum, numquam, deserunt natus corrupti, enim aperiam pariatur sed nulla!</p>
+                    <p>At Mirai Bakery, we pride ourselves on providing the freshest baked goods, desserts, pastries, and coffee to our customers in Yogyakarta. <br>
+                        Our team of expert bakers use only the finest ingredients to craft our delicious treats. Come visit us and taste the difference!</p>
                 </article>
             </div>
         </div>
 
-        <div class="detail-contact" id="contact">
+        <div class="detail-contact hidden" id="contact">
             <div class="meet-us">
                 <div class="title">
                     <h3>Meet Us</h3>
