fixing some issue

--- a/index.html
+++ b/index.html
@@ -39,38 +39,38 @@
 
     <main>
         <div class="hero" id="home">
-            <article>
+            <article class="hidden">
                 <h1>Baked With Love</h1>
                 <p>Welcome to Mirai!<br>
                     We serve the best product to our customers with all of our passion.<br>
                 </p>
             </article>
         </div>
-        <div class="card-container hidden" id="blog">
+        <div class="card-container" id="blog">
             <h3>Daily Blog</h3>
             <div class="cards">
                 <div class="card hidden">
-                    <img src="image/img1.jpg" alt="">
+                    <img src="image/img1.jpg" alt="croissant">
                     <p>Croissants are delicious pastries from France. They are made with a yeast-leavened dough that is layered with butter and folded several times to create a flaky and buttery texture.</p>
                 </div>
                 <div class="card hidden">
-                    <img src="image/img2.jpg" alt="">
+                    <img src="image/img2.jpg" alt="dessert with ice cream">
                     <p>A dessert cake with ice cream is a delicious way to enjoy two of the most popular sweet treats in one. You can use different flavors of ice cream, toppings, and decorations.</p>
                 </div>
                 <div class="card hidden">
-                    <img src="image/img3.jpg" alt="">
+                    <img src="image/img3.jpg" alt="slice cake">
                     <p>Are you craving for a sweet treat that will make your day? Look no further than our delicious slice of cake! Our cake is made with the finest ingredients and baked to perfection.</p>
                 </div>
                 <div class="card hidden">
-                    <img src="image/img4.jpg" alt="">
+                    <img src="image/img4.jpg" alt="cupcakes">
                     <p>Cupcakes are one of the most popular and versatile desserts that you can make at home. They are perfect for any occasion, whether it’s a birthday, a party, a holiday, or just a treat for yourself.</p>
                 </div>
             </div>
         </div>
-        <div class="service-container hidden" id="service">
+        <div class="service-container" id="service">
             <h3>Our Service</h3>
             <div class="cards-services">
-                <div class="service">
+                <div class="service hidden">
                     <h4>Cake</h4>
                     <i class="fa fa-cake"></i>
                     <p>we can make cakes of different sizes, shapes, flavors, and designs. You can choose from a variety of options, such as chocolate, vanilla, red velvet, carrot, cheesecake, and more</p>
@@ -93,33 +93,33 @@
             <div class="image-gallery">
                 <div class="column hidden">
                     <div class="image-item">
-                        <img src="/image/blueberrycake.jpg" alt=""/>
+                        <img src="/image/blueberrycake.jpg" alt="blueberrycake"/>
                         <div class="overlay"><span>Blueberry Cake</span></div>
                     </div>
                 </div>
                 <div class="column hidden">
                     <div class="image-item">
-                        <img src="/image/macaroon.jpg" alt="" />
+                        <img src="/image/macaroon.jpg" alt="macaroon" />
                         <div class="overlay"><span>Macaroons</span></div>
                     </div>
                     <div class="image-item">
-                        <img src="/image/cookies.jpg" alt="" />
+                        <img src="/image/cookies.jpg" alt="cookies" />
                         <div class="overlay"><span>Cookies</span></div>
                     </div>
                 </div>
                 <div class="column hidden">
                     <div class="image-item">
-                        <img src="/image/croissant.jpg" alt="" />
+                        <img src="/image/croissant.jpg" alt="croissant" />
                         <div class="overlay"><span>Croissant</span></div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="about-us hidden">
+        <div class="about-us">
             <h3>About US</h3>
-            <div class="container-us">
-                <img src="/image/samantha-sophia-WNQUJY7Fepw-unsplash.jpg" alt="">
+            <div class="container-us hidden">
+                <img src="/image/samantha-sophia-WNQUJY7Fepw-unsplash.jpg" alt="bakery shop">
                 <article class="description">
                     <h3><span>Mirai</span></h3>
                     <p>At Mirai Bakery, we pride ourselves on providing the freshest baked goods, desserts, pastries, and coffee to our customers in Yogyakarta. <br>
@@ -128,12 +128,12 @@
             </div>
         </div>
 
-        <div class="detail-contact hidden" id="contact">
+        <div class="detail-contact" id="contact">
             <div class="meet-us">
                 <div class="title">
                     <h3>Meet Us</h3>
                 </div>
-                <ul>
+                <ul class="hidden">
                     <li class="phone">
                         <i class="fa fa-phone"></i>
                         <p>+62895335587822</p>
@@ -148,7 +148,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="bio-container">
+            <div class="bio-container hidden">
                 <aside>
                     <div class="bio">
                         <h3>Our Chef</h3>
